--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.78.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
