--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,4 +2,5 @@ HTTPS=true
 SSL_CRT_FILE=../../ssl/fullchain.pem
 SSL_KEY_FILE=../../ssl/key.pem
 NODE_ENV=development
-REACT_APP_SOCKET_URL=wss://server.benti.dev:3001
+# REACT_APP_SOCKET_URL=wss://server.benti.dev:3001
+REACT_APP_SOCKET_URL=wss://server.benti.dev:8443
