--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Here we go...",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js --dev",
+    "start": "node index.js"
   },
   "author": "Tyler Selden",
   "license": "MIT",
