--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_SOCKET_URL=wss://server.benti.dev:8443/dropin
+REACT_APP_SOCKET_URL=wss://backend.benti.dev:8443/dropin
